Added ability to change quantity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.macapella.foodies">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodies">
-        <activity android:name=".ForgotPassword"></activity>
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".CartActivity" />
+        <activity android:name=".ForgotPassword" />
+        <activity android:name=".HomeActivity" />
         <activity android:name=".GetstartedActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
