--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodies">
-        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".DriverActivity" />
+        <activity android:name=".OrderConfirmationActivity" />
+        <activity android:name=".VerificationActivity" />
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".MapsActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".ForgotPassword" />
         <activity android:name=".HomeActivity" />
