--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
-
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodies">
-        <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".PaymentActivity"></activity>
+        <activity android:name=".AdminActivity" />
         <activity android:name=".DeliveryActivity" />
         <activity android:name=".OrderConfirmationActivity" />
         <activity android:name=".VerificationActivity" />
