--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-
+    ext.kotlin_version = '1.4.10'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -57,6 +57,11 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.4.0'
     testImplementation'junit:junit:4.13.2'
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.cuberto:liquid-swipe:1.0.0'
+
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core:1.3.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 }
 secrets {
