--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Foodies">
-        <activity android:name=".PaymentActivity"></activity>
+        android:theme="@style/Theme.Foodies"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".OrderHistoryActivity"></activity>
+        <activity android:name=".PaymentActivity" />
         <activity android:name=".AdminActivity" />
         <activity android:name=".DeliveryActivity" />
         <activity android:name=".OrderConfirmationActivity" />
@@ -37,7 +38,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
     </application>
 
 </manifest>
