Added the ability for admins to see active orders and cancel them. Cleaned up the layout of some activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodies"
         android:usesCleartextTraffic="true">
-        <activity android:name=".OrderHistoryDetailsActivity"></activity>
+        <activity android:name=".AdminOrderDetailsActivity"></activity>
+        <activity android:name=".OrderHistoryDetailsActivity" />
         <activity android:name=".RVActivity" />
         <activity android:name=".OrderHistoryActivity" />
         <activity android:name=".AccountSelectionActivity" />
